# givecare-bench

./: .env.example  .gitignore  .mcp.json  404.html  AGENTS.md  AGENTS.md.bak  CHANGELOG.md  CHARTER.md  CITATION.cff  CLAUDE.md  CLEANUP_VERIFICATION.txt  CODEMAP.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GPT4O_MINI_EVALUATION.txt  LICENSE  METHODOLOGY.md  README.md  REGULATORY_RESEARCH_ANALYSIS.md  REPOSITORY_STRUCTURE.md  SECURITY.md  VISION.md  belonging_trauma_rescore_comparison.json  clawpatch.config.json  direct_scorer_test_results.json  generate_leaderboard.py  index.html  mkdocs.yml  pyproject.toml  rescore_all_models.py  rescore_belonging_trauma.py  sitemap.xml
.beads/: issues.jsonl
.claude/commands/: create-dev-docs.md  update-dev-docs.md
.claude/hooks/: postToolUse.py  stop.py  userPromptSubmit.py
.claude/skills/: design-iteration.skill.md  experimental-validation.skill.md  paper-code-alignment.skill.md  research-methodology.skill.md
.githooks/: pre-commit
.github/workflows/: ci.yml  docs.yml  update_leaderboard.yml  (+1 more)
.learnings/: ERRORS.md
.night-nurse/: config.json  priorities.md  state.json
_solutions/: index.html
architecture/: index.html
archive/: README.md
autoresearch/: CLAUDE.md  REPORT.md  analyze_spread.py  constants.py  dashboard.py  experiment_log.md  generate_chart.py  program.md  run_scenario.sh  score_offline.sh  score_scenario.py
benchmark/: ARCHITECTURE.md  BENCHMARK_CARD.md  EVOLUTION.md  README.md  benchmark_card.json  benchmark_inventory.json  givecare_live.py  givecare_orchestrator.py
benchmark-card/: index.html
checks/: IB-A-disengagement-as-resolved.yaml  IB-A1.yaml  IB-A2.yaml  IB-A3.yaml  IB-A3b-recipient-aggression-toward-caregiver.yaml  IB-A4.yaml  IB-A5.yaml  IB-A6.yaml  IB-A7.yaml  IB-A8.yaml  IB-B1.yaml  IB-B2.yaml  IB-B3.yaml  IB-B4.yaml  IB-B5.yaml  IB-B6.yaml  IB-B7.yaml  IB-B8.yaml  IB-C-presence-without-action.yaml  IB-C1.yaml  IB-C2-advice-before-validation.yaml  IB-C2-options-closed.yaml  IB-C2-strength-narrative.yaml  IB-D-forced-nutrition-eol.yaml  IB-D1-zone-mismatch.yaml  IB-D2-validation-only.yaml  IB-D4-cr-endangerment.yaml  IB-D4-institutional-allegiance.yaml  IB-F1-human-identity.yaml  IB-F3-capability-overclaim.yaml  IB-F3-false-memory.yaml  _meta.yaml  index.html
configs/: README.md
data/: README.md
delivery/: build_cfm.py  build_public_score_release.py  build_public_transcript_release.py  combine_scans.py  comparative_failure_modes.yaml  contrast_analysis.py  export_taxonomy_snapshot.py  slug-map.json  sync_web_bench.py  taxonomy-snapshot.yaml
docs/: _solutions.md  architecture.md  benchmark-card.md  benchmark-scoring-audit-2026-03-24.md  checks.md  clawpatch-watchlist.md  evolution.md  findings.md  governance.md  index.md  install.md  judge-validation.md  methodology.md  nomenclature.md  ontology.md  publishing-audit.md  quickstart.md  regulatory.md  rescored-benchmark-summary-2026-03-31.md  results-experience.md  scenarios.md  scoring-rubric.md  taxonomy.md  verifier-unit-tests.md  verifier-validation.md  what-invisiblebench-owns.md
evals/: annotation_rubric.md  config.json  design_learnings.md  traces_for_labeling.json  traces_for_labeling_old_feb13.json  validate.html
evolution/: index.html
examples/: README.md
findings/: index.html
governance/: index.html
install/: index.html
internal/: README.md  failure_modes_v0.md  taxonomy_v0.md  v3_session_report.md
judge-validation/: index.html
longbench/: __init__.py  cli.py  resilience.py  run_manager.py  variance.py  yaml_cli.py
methodology/: index.html
nomenclature/: index.html
ontology/: index.html
paper/: ALL_FIXES_APPLIED.txt  BEST_VERSION_README.txt  COMPLETE_PAPER_READY.txt  EXPORT_SUMMARY.md  FINAL_BEST_VERSION.txt  HYBRID_PROTOCOL.md  PAPER_IMPROVEMENTS_README.md  README.md  REVIEW_RESPONSE.md  REVISIONS_COMPLETE.md  TASKS.md  VIEW_PAPERS.txt  main.py  pyproject.toml
plans/: .gitignore  prd.json  progress.txt  prompt.md
publishing-audit/: index.html
quickstart/: index.html
regulatory/: index.html
reports/: README.md  ai-review-2026-01-27.md  ai-review-2026-01-28.md  improve-2026-01-27.md
research/: 2026-01-27.md
results/: .gitkeep
results-experience/: index.html
runs/: .gitignore
scenarios/: README.md  index.html  schema.yaml  tier1_crisis_detection.json  tier1_medical_boundary_violation.json  tier2_asian_american_filial_piety.json  tier2_young_caregiver_isolation.json
scoring-rubric/: index.html
scripts/: README.md  __init__.py  _audit_helpers.py  add_cue_anchors.py  audit_gold_regard.py  audit_gold_scorer.py  audit_holdout_regard.py  audit_holdout_regard_binary.py  audit_holdout_scorer.py  batch_tag_scenarios.py  build_golden_set.py  build_golden_set_templates.py  build_holdout_gold.py  build_regard_pairwise_pilot.py  build_regard_quality_holdout.py  deploy-docs.sh  deslop.py  export_false_scope_inventory.py  generate_leaderboard.py  generate_verifier_corpus.py  golden_set_kappa.py  import_evals.py  lint_turn_indices.py  overnight-promote.sh  post_discussion.sh  publish.sh  qa_leaderboard.py  reconcile_leaderboard_metadata.py  rescore_diff.py  resolve_unclear_scan.py  run_bench.sh  run_claude_verifier.py  run_golden_silver.py  run_golden_verifier.py  run_pairwise_pilot.py  run_scan.py  run_v3_blindspot_scan.py  sync_web_bench_leaderboard.py  write_rescore_comparison.py
search/: search_index.json
src/: __init__.py  api_client.py  evaluator.py  judge_prompts.py  results_exporter.py  runner.py  scenario_loader.py  setup.py
state/: findings-2026-01-27.json
taxonomy/: index.html
tests/: __init__.py  conftest.py  test_cli.py  test_jurisdiction_rules.py  test_loaders.py  test_orchestrator.py  test_orchestrator_iterations.py  test_progress.py  test_resilience.py  test_run_manager.py  test_scorers.py  test_variance.py
tools/: generate_leaderboard_data.py
v2-research-review/: index.html
verifier-unit-tests/: index.html
verifier-validation/: index.html
website/: README.md  about.html  index.html  leaderboard.html  style.css
what-invisiblebench-owns/: index.html
(+2655 files in other folders)
